# opendoc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SKILLS.md  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  security.yml
benchmarks/: README.md
benchmarks/baselines/: mac16-12-m4-10c-16gb.json
benchmarks/reports/: phase0-status.md
crates/casual-doc-export/: Cargo.toml
crates/casual-doc-export/src/: lib.rs
crates/casual-doc-import/: Cargo.toml
crates/casual-doc-import/src/: body.rs  config.rs  error.rs  lib.rs  media.rs  numbering.rs  properties.rs  report.rs  retain.rs  styles.rs  tests.rs
crates/casual-doc-model/: Cargo.toml
crates/casual-doc-model/src/: body.rs  document.rs  error.rs  extension.rs  ids.rs  lib.rs  snapshot.rs  tests.rs  v1.rs
crates/casual-doc-model/src/v1/: body.rs  definitions.rs  document.rs  ids.rs  migration.rs  mod.rs  properties.rs  tests.rs
crates/casual-doc-ooxml/: Cargo.toml
crates/casual-doc-ooxml/examples/: generate_fixtures.rs
crates/casual-doc-ooxml/src/: archive.rs  contenttypes.rs  discovery.rs  error.rs  lib.rs  limits.rs  package.rs  path.rs  relationships.rs  tests.rs
crates/casual-doc-sdk/: Cargo.toml
crates/casual-doc-sdk/src/: command.rs  config.rs  error.rs  event.rs  lib.rs  selection.rs  session.rs  snapshot.rs  tests.rs  value.rs
crates/casual-doc-selection/: Cargo.toml
crates/casual-doc-selection/src/: lib.rs
crates/casual-doc-transaction/: Cargo.toml
crates/casual-doc-transaction/src/: lib.rs
docs/: 00-README.md  01-ORD.md  02-ARCHITECTURE.md  03-HLD.md  04-LLD.md  05-SDK-API-SPEC.md  06-ROADMAP-AND-DELIVERY.md  07-QUALITY-SECURITY-AND-COMPATIBILITY.md  08-ADR-REGISTER.md  09-REPOSITORY-AND-CONTRIBUTION.md  10-PROJECT-GOAL-AND-STANDARDS.md  11-DESIGN-FIRST-PROCESS.md  12-COMPETITIVE-ANALYSIS.md  13-UX-AND-BUG-HUNTING.md  14-EXECUTION-TRACKER.md  15-CI-AND-RELEASE-GATES.md  16-DOCUMENTATION-MAINTENANCE.md  17-GLOSSARY.md  18-SUPPORT-MATRIX.md  19-WORKSPACE-SCAFFOLD-DESIGN.md  20-ERROR-CODE-REGISTRY.md  21-PARSER-LIMITS.md  22-NORMALIZED-SCHEMA-V0.md  23-DOCX-FIXTURE-CORPUS.md  24-TRANSACTION-SEMANTICS.md  25-NORMALIZED-SNAPSHOT-IO.md  26-SELECTION-FOUNDATION.md  27-RUNTIME-EVENT-FOUNDATION.md  28-DOCX-PACKAGE-READER.md  29-BENCHMARK-AND-BASELINE-HARNESS.md  30-PHASE-0-CLOSURE-DESIGN.md  31-PHASE-0-EXIT-REPORT.md  32-PHASE-1A-SEMANTIC-DOCX-IMPORT-DESIGN.md  33-DOCX-ENGINE-COMPETITOR-RESEARCH.md  34-OOXML-FIDELITY-ARCHITECTURE.md  35-DISPOSITION-TAXONOMY.md  36-ADR-027-ACCEPTANCE-RECORD.md  37-PHASE-1A-DECISION-RESEARCH.md  38-NORMALIZED-SCHEMA-V1-DESIGN.md
fixtures/: README.md  manifest.json
fixtures/corpus/: real-producer-footnotes.docx  real-producer-header-footer.docx  real-producer-hyperlinks.docx  real-producer-libreoffice.docx  real-producer-rich.docx  real-producer-table-list.docx  real-producer-table-merges.docx
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: docx_package.rs
fuzz/reports/: phase0-clean-smoke.md
tools/opendoc-benchmark/: Cargo.toml
tools/opendoc-benchmark/src/: main.rs
tools/opendoc-fidelity/: Cargo.toml
tools/opendoc-fidelity/src/: main.rs
