[package]
name = "casual-doc-export"
description = "Internal DOCX package writer (no-edit reconstruction from retained source)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
casual-doc-import.workspace = true
zip.workspace = true

[dev-dependencies]
casual-doc-model.workspace = true
casual-doc-ooxml.workspace = true

[lints]
workspace = true
