[package]
name = "casual-doc-import"
description = "Internal WordprocessingML semantic import into the OpenDoc model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
casual-doc-model.workspace = true
casual-doc-ooxml.workspace = true
quick-xml.workspace = true

[dev-dependencies]
zip.workspace = true

[lints]
workspace = true
