[package]
name = "casual-doc-ooxml"
description = "Internal security-bounded OOXML package reader for OpenDoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
zip.workspace = true

[lints]
workspace = true
