[package]
name = "casual-doc-sdk"
description = "Public Rust facade for the OpenDoc document runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
casual-doc-model.workspace = true
casual-doc-selection.workspace = true
casual-doc-transaction.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
