[package]
name = "casual-doc-selection"
description = "Internal logical selection engine for OpenDoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
casual-doc-model.workspace = true
casual-doc-transaction.workspace = true

[lints]
workspace = true
