[package]
name = "casual-doc-transaction"
description = "Internal transaction engine for OpenDoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
casual-doc-model.workspace = true
unicode-segmentation.workspace = true

[lints]
workspace = true
